# qt_gl_gst_poc

./: GstGLBufferDef.h  README.md  brick.frag  colourhighlight.frag  glcontextid.h  glwidget.cpp  glwidget.h  gstthread.cpp  gstthread.h  main.cpp  pipeline.cpp  pipeline.h  qt_gl_gst.pro  yuv2rgb-testing.frag  yuv2rgb.frag
shaders/: alphamask.frag
src/glm-0.3.1/: AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  TODO  aclocal.m4  autogen.sh  config.h.in  configure  configure.in  glm.spec  glm.spec.in
src/glm-0.3.1/examples/: Makefile.am  Makefile.in  game_glutobj.c  gltb.c  gltx.h  gluiobj.cpp  glutobj.c  smooth.c
src/glm-0.3.1/glm/: Makefile.am  Makefile.in  glm.c  glmimg.c  glmimg_jpg.c
src/glm-0.3.1/glmeml/: Makefile.am  Makefile.in  glm.c  glm.h  glmimg.c
src/glm-0.3.1/m4/: Makefile.am  Makefile.in  acx_pthread.m4  ax_check_gl.m4  ax_check_glu.m4  ax_check_glui.m4  ax_check_glut.m4  ax_lang_compiler_ms.m4  simage.m4
src/qt_gl_gst/: applogger.cpp  applogger.h  asyncwaitingqueue.h  controlsform.cpp  controlsform.h  controlsform.ui  glpowervrwidget.cpp  glpowervrwidget.h  glwidget.cpp  glwidget.h  gstpipeline.cpp  gstpipeline.h  gstthread.cpp  gstthread.h  main.cpp  mainwindow.cpp  mainwindow.h  model.cpp  model.h  pipeline.cpp  pipeline.h  qt_gl_gst.pro  qt_gl_gst_omap3530.pro  run_with_1_vid_omap3.sh  run_with_3_vids.sh  run_with_5_vids.sh  shaderlists.cpp  shaderlists.h  tigstpipeline.cpp  tigstpipeline.h  vidthread.cpp  vidthread.h  yuvdebugwindow.cpp  yuvdebugwindow.h
src/qt_gl_gst/shaders/: alphamask-gles.frag  alphamask-gles.vert  alphamask-recttex.frag  alphamask.frag  brick-gles.frag  brick-gles.vert  brick.frag  brick.vert  colourhilight-gles.frag  colourhilight.frag  colourhilightswap-gles.frag  colourhilightswap.frag  noeffect.frag  noeffect.vert  vidlighting.frag  vidlighting.vert  yuv2rgb-normalisedtexcoords-gles.frag  yuv2rgb.frag  yuv2rgbI420-normalisedtexcoords-recttex.frag  yuv2rgbI420-normalisedtexcoords.frag  yuv2rgbI420-recttex.frag  yuv2rgbI420.frag  yuv2rgbUYVY-imgstream.frag  yuv2rgbUYVY-normalisedtexcoords-imgstream.frag  yuv2rgbUYVY-normalisedtexcoords.frag  yuv2rgbUYVY.frag
src/qt_widget_gl_scene/: camera.cpp  camera.h  demoitem.cpp  demoitem.h  demoscene.cpp  demoscene.h  demoview.cpp  demoview.h  main.cpp  qt_widget_gl_scene.pro
